# study

./: gray_histogram.py  light_.cpp  movedetect_framesub  movedetect_framesub.cpp  opencv_test.cpp  strength  strength.cpp  test.conf  test_hello  zlog_study.c
BackgroundSplit-OpenCV-master/: CMakeCache.txt  CMakeLists.txt
BackgroundSplit-OpenCV-master/src/BGDifference/: BGD  BGDifference.cpp  main.cpp
BackgroundSplit-OpenCV-master/src/ViBe/: Vibe.cpp  Vibe.h  main  main.cpp
BackgroundSplit-OpenCV-master/src/ViBe+/: VibeP  main.cpp
